--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+}
+
 .nav{
     padding: 20px;
     font-size: 20px;
@@ -29,15 +33,19 @@
     align-items: flex-start;
     justify-content: center;
 }
-.myProjects{
+/*.myProjects{
     text-align: center;
     padding:20px;
     margin: 20px;
     text-decoration: bold;
-}
-.card{
+}*/
+/*.card{
     margin:20px;
-}
+}*/
 .card-text{
     color: black;
+}
+
+.card:hover{
+    opacity: 0.5;
 }
